jobs-container style

--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
                         <a href="#" >Serviços</a>
                     </li>
                     <li>
+                        <a href="#" >Contato</a>
+                    </li>
+                    <li>
                         <a href="#" class="btn btn-primary">Entrar</a>
                     </li>
                     <li>
@@ -43,7 +46,7 @@
         <h2>O que fazemos</h2>
         <div class="services-card-container">
             <div class="services-card">
-                 <i class="fas fa-chat-line"></i>
+                 <i class="fab fa-buffer"></i>
                  <h3>Desenvolvimento full stack</h3>
                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa velit sit ab ea, a ipsum adipisci fugit esse eos doloremque aperiam omnis deserunt possimus quasi. Corrupti possimus dolorem placeat inventore.</p>
             </div>   
@@ -55,13 +58,13 @@
            </div>    
             
            <div class="services-card">
-                <i class="fas fa-chat-plus"></i>
+                <i class="fas fa-cart-plus"></i>
                 <h3>E-commerces</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa velit sit ab ea, a ipsum adipisci fugit esse eos doloremque aperiam omnis deserunt possimus quasi. Corrupti possimus dolorem placeat inventore.</p>
             </div> 
 
             <div class="services-card">
-                <i class="fas fa-chat-line"></i>
+                <i class="fas fa-chart-line"></i>
                 <h3>SEO</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa velit sit ab ea, a ipsum adipisci fugit esse eos doloremque aperiam omnis deserunt possimus quasi. Corrupti possimus dolorem placeat inventore.</p>
            </div>     
@@ -84,7 +87,7 @@
     </main>
     
     <!-- serviçõs -->
-    <!-- <div class="jobs-container">
+    <div class="jobs-container">
         <h2>Alguns dos nossos Trabalhos</h2>
         <div class="jobs-list">
             <div class="firts-job" id="job1">
@@ -93,7 +96,7 @@
                     <p class="job-card-description">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Expedita quod, similique nemo tempora exercitationem amet neque ipsam unde perspiciatis voluptates officiis dolor libero enim doloribus ipsa! Molestias veniam optio accusantium?</p>
                 </div>
             </div>
-            <div class="other-job-container">
+            <div class="other-jobs-container">
                 <div class="job-card" id="job2">
                     <div class="job-card-cover">
                         <p class="job-card-title">Projeto 2</p>
@@ -120,7 +123,7 @@
                 </div>
             </div>
         </div>
-    </div> -->
+    </div>
     <!-- footer -->
     <!-- <footer class="footer-container">
         <div class="footer-desk-container">
