Styles for Finished Index

--- a/index.html
+++ b/index.html
@@ -125,79 +125,81 @@
         </div>
     </div>
     <!-- footer -->
-    <!-- <footer class="footer-container">
-        <div class="footer-desk-container">
-            <h3 class="footer-title">Agency</h3>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magnam similique voluptatem quos quisquam eligendi error, ipsa voluptates explicabo doloribus eum non reprehenderit rem nam aliquid? Blanditiis deleniti error sint dolore.</p>
-        </div>
-        <div class="footer-links-container">
-            <div class="footer-links-container-list">
-                <p class="footer-title">Links</p>
-                <ul>
-                    <li>
-                        <a href="#">Base de conhecimentos</a>
-                    </li>
-                    <li>
-                        <a href="#">Trabalhe conoscco</a>
-                    </li> 
-                    <li>
-                        <a href="#">Últimos Projetos</a>
-                    </li> 
-                    <li>
-                        <a href="#">Política de privacidade</a>
-                    </li> 
-                    <li>
-                        <a href="#">Contato</a>
-                    </li>  
-                </ul>
+    <footer>
+        <div class="footer-container">
+            <div class="footer-desc-container">
+                <h3 class="footer-title">Agency</h3>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magnam similique voluptatem quos quisquam eligendi error, ipsa voluptates explicabo doloribus eum non reprehenderit rem nam aliquid? Blanditiis deleniti error sint dolore.</p>
             </div>
-
-            <div class="footer-links-container-list">
-                <p class="footer-title">Links</p>
-                <ul>
-                    <li>
-                        <a href="#">Base de conhecimentos</a>
-                    </li>
-                    <li>
-                        <a href="#">Trabalhe conoscco</a>
-                    </li> 
-                    <li>
-                        <a href="#">Últimos Projetos</a>
-                    </li> 
-                    <li>
-                        <a href="#">Política de privacidade</a>
-                    </li> 
-                    <li>
-                        <a href="#">Contato</a>
-                    </li>  
-                </ul>
-            </div>
-
-            <div class="footer-links-container-list">
-                <p class="footer-title">Links</p>
-                <ul>
-                    <li>
-                        <a href="#">Base de conhecimentos</a>
-                    </li>
-                    <li>
-                        <a href="#">Trabalhe conoscco</a>
-                    </li> 
-                    <li>
-                        <a href="#">Últimos Projetos</a>
-                    </li> 
-                    <li>
-                        <a href="#">Política de privacidade</a>
-                    </li> 
-                    <li>
-                        <a href="#">Contato</a>
-                    </li>  
-                </ul>
+            <div class="footer-links-container">
+                <div class="footer-links-container-list">
+                    <p class="footer-title">Links</p>
+                    <ul>
+                        <li>
+                            <a href="#">Base de conhecimentos</a>
+                        </li>
+                        <li>
+                            <a href="#">Trabalhe conoscco</a>
+                        </li> 
+                        <li>
+                            <a href="#">Últimos Projetos</a>
+                        </li> 
+                        <li>
+                            <a href="#">Política de privacidade</a>
+                        </li> 
+                        <li>
+                            <a href="#">Contato</a>
+                        </li>  
+                    </ul>
+                </div>
+    
+                <div class="footer-links-container-list">
+                    <p class="footer-title">Links</p>
+                    <ul>
+                        <li>
+                            <a href="#">Base de conhecimentos</a>
+                        </li>
+                        <li>
+                            <a href="#">Trabalhe conoscco</a>
+                        </li> 
+                        <li>
+                            <a href="#">Últimos Projetos</a>
+                        </li> 
+                        <li>
+                            <a href="#">Política de privacidade</a>
+                        </li> 
+                        <li>
+                            <a href="#">Contato</a>
+                        </li>  
+                    </ul>
+                </div>
+    
+                <div class="footer-links-container-list">
+                    <p class="footer-title">Links</p>
+                    <ul>
+                        <li>
+                            <a href="#">Base de conhecimentos</a>
+                        </li>
+                        <li>
+                            <a href="#">Trabalhe conoscco</a>
+                        </li> 
+                        <li>
+                            <a href="#">Últimos Projetos</a>
+                        </li> 
+                        <li>
+                            <a href="#">Política de privacidade</a>
+                        </li> 
+                        <li>
+                            <a href="#">Contato</a>
+                        </li>  
+                    </ul>
+                </div>     
             </div>
             <div class="footer-copy-right-container">
                 <p>&copy: 2021 Agency</p>
                 <p>A melhor agencia web para seus projetos</p>
             </div>
         </div>
-    </footer> -->
+    </footer>
 </body>
 </html>
